infrastructure/configs/network-policies/immich/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-server
spec:
  podSelector:
    matchLabels:
      app: immich-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 2283
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-immich-internet
spec:
  podSelector:
    matchLabels:
      app: immich-server
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - ${LAN_SUPERNET}
      ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ml-internet
spec:
  podSelector:
    matchLabels:
      app: immich-machine-learning
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - ${LAN_SUPERNET}
      ports:
        - port: 443
          protocol: TCP
